--- a/css/style.scss
+++ b/css/style.scss
@@ -10,52 +10,61 @@ header {
     color: white;
     padding: 10px 0;
     text-align: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    font-family: 'Poppins', sans-serif;
+
+
+    h1 {
+        margin: 0;
+    }
 }
 
-header h1 {
-    margin: 0;
-}
+nav {
+    ul {
+        list-style: none;
+        padding: 0;
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
+        li {
+            display: inline;
+            margin-right: 20px;
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
+            a {
+                color: white;
+                text-decoration: none;
+            }
+        }
+    }
 }
 
 main {
     padding: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
 }
 
 .form-group {
     margin-bottom: 10px;
-}
+    padding-left: 20px;
+    padding-right: 20px;
 
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-}
+    label {
+        display: block;
+        margin-bottom: 5px;
+    }
 
-.form-group input[type="text"],
-.form-group input[type="date"],
-.form-group textarea {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
+    input[type="text"],
+    input[type="date"],
+    textarea {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+    }
 
-.form-group textarea {
-    height: 100px;
-    resize: vertical;
+    textarea {
+        height: 100px;
+        resize: vertical;
+    }
 }
 
 button {
@@ -65,10 +74,31 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+
+
+    &:hover {
+        background-color: darken(#4cae4c, 10%);
+        transition: 0.2s ease-in;
+    }
 }
 
-button:hover {
-    background-color: #4cae4c;
+.creation_bouton {
+    padding-left:20px;
+}
+
+.idDiv {
+    padding-left: 20px;
+    font-size: 14px;
+
+    &__bouton-suppression {
+        background-color: #D71313;
+
+        &:hover {
+            background-color: darken(#D71313, 10%);
+            transition: 0.2s ease-in;
+        }
+    }
 }
 
 footer {
@@ -76,8 +106,9 @@ footer {
     padding: 10px 0;
     background-color: #333;
     color: white;
-}
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-footer p {
-    margin: 0;
+    p {
+        margin: 0;
+    }
 }
