--- a/css/style.scss
+++ b/css/style.scss
@@ -1,21 +1,27 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #EEEEEE;
 }
 
 header {
-    background-color: #333;
+    background-color: #393E46;
     color: white;
     padding: 10px 0;
     text-align: center;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    font-family: 'Poppins', sans-serif;
-
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 4px 12px 0px;
+    font-family: 'Pacifico', cursive;
 
     h1 {
         margin: 0;
+        font-size: calc(1em + 0.5vw);
+        letter-spacing: 1px;
+        color: #00ADB5;
+        &:hover {
+            color: white;
+            transition: 0.3s ease;
+        }
     }
 }
 
@@ -31,6 +37,13 @@ nav {
             a {
                 color: white;
                 text-decoration: none;
+
+                &:hover,
+                &:focus {
+                    color: #00ADB5;
+                    outline: none;
+                    transition: 0.3s ease;
+                }
             }
         }
     }
@@ -38,14 +51,19 @@ nav {
 
 main {
     padding: 20px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 14px;
+
+    h2 {
+        color: #393E46;
+        margin-left: 10px;
+    }
 }
 
 .form-group {
     margin-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 1.2%;
+    padding-right: 1.2%;
 
     label {
         display: block;
@@ -68,47 +86,77 @@ main {
 }
 
 button {
-    background-color: #5cb85c;
+    background-color: #00ADB5;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family: 'Poppins', sans-serif;
-
+    font-family: 'Lato', sans-serif;
 
     &:hover {
-        background-color: darken(#4cae4c, 10%);
-        transition: 0.2s ease-in;
+        background-color: darken(#00ADB5, 5%);
+        transition: background-color 0.3s ease;
+    }
+
+    &:focus {
+        outline: 2px solid #00ADB5;
     }
 }
 
 .creation_bouton {
-    padding-left:20px;
+    padding-left: 20px;
 }
 
-.idDiv {
-    padding-left: 20px;
-    font-size: 14px;
+.conteneur {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    padding-left: 1.1%;
 
-    &__bouton-suppression {
-        background-color: #D71313;
+    &__idDiv {
+        padding-left: 2.2%;
+        padding-bottom: 2%;
+        padding-top: 0.7%;
+        font-size: 14px;
+        background-color: #393E46;
+        color: #EEEEEE;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
-        &:hover {
-            background-color: darken(#D71313, 10%);
-            transition: 0.2s ease-in;
+        &__bouton-suppression {
+            background-color: #D71313;
+            margin-left: 3px;
+
+            &:hover {
+                background-color: darken(#D71313, 10%);
+                transition: background-color 0.3s ease;
+            }
         }
     }
+}
+
+.dispo-form {
+    margin-top: 1%;
+    font-family: 'Lato', sans-serif;
 }
 
 footer {
     text-align: center;
     padding: 10px 0;
-    background-color: #333;
+    background-color: #393E46;
     color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 4px 12px 0px;
+    font-family: 'Pacifico', cursive;
 
     p {
         margin: 0;
+    }
+}
+
+.dispo-form {
+    button {
+        margin-left: 0.3%;
     }
 }
