--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,7 @@ header {
         font-size: calc(1em + 0.5vw);
         letter-spacing: 1px;
         color: #00ADB5;
+
         &:hover {
             color: white;
             transition: 0.3s ease;
@@ -85,7 +86,7 @@ main {
     }
 }
 
-button {
+#idBouton {
     background-color: #00ADB5;
     color: white;
     padding: 10px 15px;
@@ -104,8 +105,10 @@ button {
     }
 }
 
-.creation_bouton {
-    padding-left: 20px;
+#event-form {
+    .creation_bouton {
+        padding-left: 20px;
+    }
 }
 
 .conteneur {
@@ -125,9 +128,54 @@ button {
         color: #EEEEEE;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
+        &__dispo-form {
+            margin-top: 4%;
+            font-family: 'Lato', sans-serif;
+
+            &__edit {
+                background-color: #32a852;
+                color: #eee;
+                margin-left: 3px;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                font-family: 'Lato', sans-serif;
+                padding: 2px 2px;
+                vertical-align: middle;
+
+                &:hover {
+                    background-color: darken(#32a852, 10%);
+                    transition: background-color 0.3s ease;
+                }
+
+            }
+        }
+
+        &__bouton-edit {
+            background-color: #00ADB5;
+            color: #eee;
+            margin-left: 3px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-family: 'Lato', sans-serif;
+            padding: 10px 15px;
+
+            &:hover {
+                background-color: darken(#00ADB5, 10%);
+                transition: background-color 0.3s ease;
+            }
+        }
+
         &__bouton-suppression {
             background-color: #D71313;
+            color: #eee;
             margin-left: 3px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-family: 'Lato', sans-serif;
+            padding: 10px 15px;
 
             &:hover {
                 background-color: darken(#D71313, 10%);
@@ -135,11 +183,6 @@ button {
             }
         }
     }
-}
-
-.dispo-form {
-    margin-top: 1%;
-    font-family: 'Lato', sans-serif;
 }
 
 footer {
@@ -155,8 +198,73 @@ footer {
     }
 }
 
-.dispo-form {
-    button {
-        margin-left: 0.3%;
+.dispo-list {
+    margin-top: 2%;
+    margin-left: 2%;
+
+    &__conteneur-dispo {
+        display: flex;
+
+        &__boutons {
+            margin-left: 8%;
+            position: absolute;
+            margin-top: 5px;
+
+            &__suppression {
+                background-color: #D71313;
+                color: #eee;
+                margin-left: 3px;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                font-family: 'Lato', sans-serif;
+                padding: 10px 15px;
+
+                &:hover {
+                    background-color: darken(#D71313, 10%);
+                    transition: background-color 0.3s ease;
+
+                    &:focus {
+                        outline: 2px solid #D71313;
+                    }
+                }
+
+            }
+
+            &__edit {
+
+                background-color: #00ADB5;
+                color: #eee;
+                margin-left: 3px;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                font-family: 'Lato', sans-serif;
+                padding: 10px 15px;
+
+                &:hover {
+                    background-color: darken(#00ADB5, 10%);
+                    transition: background-color 0.3s ease;
+
+                    &:focus {
+                        outline: 2px solid #00ADB5;
+                    }
+                }
+
+            }
+        }
     }
+}
+
+//
+
+.material-symbols-outlined {
+    vertical-align: bottom;
+    margin-right: 1px;
+
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 250,
+        'GRAD' 0,
+        'opsz' 24
 }
