ajout du tableau

--- a/css/style.css
+++ b/css/style.css
@@ -223,4 +223,30 @@ footer p {
   vertical-align: bottom;
   margin-right: 1px;
   font-variation-settings: "FILL" 0, "wght" 250, "GRAD" 0, "opsz" 24;
+}
+
+.date-table {
+  display: flex;
+  border-collapse: collapse;
+  margin-bottom: 17px;
+}
+.date-table tbody {
+  display: flex;
+}
+.date-table .cellules_tab {
+  display: flex;
+  border: solid 2px;
+  padding: 20px;
+  background-color: #5e5e5e;
+}
+.date-table .cellules_dispo_tab {
+  display: flex;
+  padding: 30px;
+  justify-content: center;
+  border: solid 2px;
+  background-color: #9b9b9b;
+}
+.date-table .cellules_dispo_tab .div_cellules_dispo_tab_ {
+  padding: 10px;
+  border: solid 1px;
 }/*# sourceMappingURL=style.css.map */
