--- a/css/style.scss
+++ b/css/style.scss
@@ -268,3 +268,37 @@ footer {
         'GRAD' 0,
         'opsz' 24
 }
+
+.date-table {
+    display: flex;
+    border-collapse: collapse;
+    margin-bottom: 17px;
+
+    tbody {
+        display: flex;
+    }
+
+    .cellules_tab {
+        display: flex;
+        border: solid 2px;
+        padding: 20px;
+        background-color: #5e5e5e;
+       
+    }
+
+    .cellules_dispo_tab {
+        display: flex;
+        padding: 30px;
+        justify-content: center;
+        border: solid 2px;
+        background-color: #9b9b9b;
+        
+
+        .div_cellules_dispo_tab_{
+            padding: 10px;
+            border: solid 1px;
+        }
+
+       
+    }
+}
